# iflight_sitl

./: .gitignore  231.sdf  99-usb-all.rules  Makefile  README.md  hello_world_plugin.sdf  lift_drag.sdf  old_world.sdf  test.sdf  test_gui.sdf  test_world.sdf  wcjoint.sdf  withcjoint.sdf  world.sdf
hello_world_plugin/: CMakeLists.txt  HelloWorld.cc
in_dev/: lift_drag.sdf  quadcopter.sdf
maybe/: Iflight.cc  Iflight.hh
models/: Makefile  TEMP
models/flix/: flix.sdf  imu
models/floor/: floor.sdf  model.config
models/goal_test/: goal_test.sdf  model.config
models/goal_test/media/: goal_test.dae
models/iflight/: ccw.STL  cw.STL  iflight.sdf  iflight_rot.sdf  model.config  old
models/iflight_force/: iflight_force.sdf  model.config
models/iflight_multi/: iflight_multi.sdf  model.config
models/iris/: iris.sdf  model.config
models/iris_with_standoffs/: model.sdf
models/world_test/: model.config  world_test.sdf
plugin/: CMakeLists.txt  Iflight.cc  Iflight.hh
rust_utility/: Cargo.toml
