[package]
name = "rust_utility"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.1"
gz = { version = "0.9.0", features = ["harmonic"] }
hidapi = "2.6.3"
env_logger = { version = "0.11.8", default-features = false, features = [
  "auto-color",
  "humantime",
] }
egui_extras = {version = "0.32.1", features = ["all_loaders"]}
image = "0.25.6"
crossbeam-utils = "0.8.21"
nalgebra = "0.34.0"
